# qwen3-asr.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: usage.md
include/asr/aligner/: encoder.h  encoder_model.h
include/asr/codec/: codec.h
include/asr/mel/: mel.h
include/asr/transcribe/: decoder.h  encoder.h  encoder_model.h
src/: audio_encoder.cpp  audio_encoder.h  audio_utils.cpp  audio_utils.h  batch_scheduler.cpp  batch_scheduler.h  forced_aligner.cpp  forced_aligner.h  gguf_loader.cpp  gguf_loader.h  logger.cpp  logger.h  main.cpp  mel_spectrogram.cpp  qwen3_asr.cpp  qwen3_asr.h  qwen3asr_c_api.cpp  qwen3asr_c_api.h  text_decoder.cpp  text_decoder.h
src/aligner/: encoder.cpp  test_encoder.cpp
src/asr/aligner/: decoder.cpp  decoder.hpp  decoder_model.hpp  encoder.cpp  encoder.hpp  encoder_model.hpp  test_decoder.cpp
src/asr/codec/: codec.cpp  codec.hpp  wav_loader.cpp
src/asr/common/: hf_tokenizer.hpp  types.hpp
src/asr/mel/: mel.cpp  mel.hpp
src/asr/transcribe/: decoder.cpp  decoder.hpp  decoder_model.hpp  encoder.cpp  encoder.hpp  encoder_model.hpp
src/codec/: codec.cpp  test_codec.cpp  wav_loader.cpp
src/http_server/: align_handler.cpp  align_server.cpp  align_server.h  asr_handler.cpp  asr_server.cpp  asr_server.h  server.cpp  server.h  transcribe_handler.cpp  transcribe_server.cpp  transcribe_server.h
src/mel/: mel.cpp  test_mel.cpp
src/modules/align_encoder/: align_encoder.cpp  align_encoder.h  align_encoder_model.h  test_align_encoder.cpp
src/modules/asr_encoder/: asr_encoder.cpp  asr_encoder.h  asr_encoder_model.h  test_asr_encoder.cpp
src/modules/audio_codec/: audio_codec.cpp  audio_codec.h  test_audio_codec.cpp  wav_loader.cpp
src/modules/common/: types.h
src/modules/decoder/: decoder.cpp  decoder.h  decoder_model.h  test_decoder.cpp
src/modules/encoder/: encoder.cpp  encoder.h  encoder_model.h  test_encoder.cpp
src/modules/mel/: mel.cpp  mel.h  test_mel.cpp
src/tools/: asr_cli.cpp  quantize.cpp
src/transcribe/: decoder.cpp  encoder.cpp  test_decoder.cpp  test_encoder.cpp
tests/: integration_test.cpp  test_aligner_decoder.cpp  test_aligner_decoder_simple.cpp  test_aligner_encoder.cpp  test_attention_compare.cpp  test_audio_utils.cpp  test_batch_align.cpp  test_batch_decode.cpp  test_batch_encode.cpp  test_batch_performance.cpp  test_c_api.cpp  test_codec_module.cpp  test_conv1.cpp  test_conv_no_chunk.cpp  test_conv_only.cpp  test_decoder_50.cpp  test_decoder_last_pos.cpp  test_decoder_trace.cpp  test_e2e_batch_transcribe.cpp  test_injection.cpp  test_kernel_load.cpp  test_mel_module.cpp  test_qkcompare.cpp  test_tokenization.cpp  test_transcribe_decoder.cpp  test_transcribe_encoder.cpp
